--- a/Report.Rmd
+++ b/Report.Rmd
@@ -249,7 +249,7 @@ Ben Douissa, I. (2020, November). Factors affecting college students’ multidim
 
 Hamdan, A., Sue L.T. Mcgregor, & Elhassan, W. (2021, June 5). Financial Literacy, Stability, and Security as Understood by Male Saudi University Students. Retrieved December 14, 2023, from ResearchGate website: https://www.researchgate.net/publication/352251201_Financial_Literacy_Stability_and_Security_as_Understood_by_Male_Saudi_University_Students
 
-Otaibi, A., & Kausar Yasmeen. (2014, December). Saudi consumer’s shopping behaviour: Descriptive Analysis. Retrieved December 14, 2023, from ResearchGate website: https://www.researchgate.net/publication/287531379_Saudi_consumer's_shopping_behaviourDescriptive_Analysis
+Otaibi, A., & Kausar Yasmeen. (2014, December). Saudi consumer’s shopping behaviour: Descriptive Analysis. Retrieved December 14, 2023
 
 Qahwaji, D. M. (2023). Lifestyle behaviours, dietary habits, physical activity and biochemical measurements in Saudi University students. Medical Science, 27(134). https://doi.org/10.54905/disssi/v27i134/e198ms2940
 
